<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/settings"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weightLayoutS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/weight">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/weightEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/stepLengthLayoutS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/stepLength">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/stepLengthEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/stepGoalLayoutS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/stepGoal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/stepGoalEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/saveSettingsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:onClick="saveButtonOnClick"/>

</LinearLayout>